application/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDEQUAL
    COLON
    EXP
    LBRACKET
    LNOT
    LSHIFT
    LSHIFTEQUAL
    NO
    OREQUAL
    PERIOD
    Q
    QQ
    QR
    QW
    QX
    RBRACKET
    RSHIFT
    RSHIFTEQUAL
    S
    TERNARY
    TR
    UNLESS
    UNTIL
    XOREQUAL

Grammar

Rule 0     S' -> init
Rule 1     init -> command init
Rule 2     init -> command
Rule 3     init -> function init
Rule 4     init -> function
Rule 5     blockcode -> command
Rule 6     blockcode -> blockcode command
Rule 7     command -> interations
Rule 8     command -> IF LPAREN exp RPAREN if_statement
Rule 9     command -> exp SEMICOLON
Rule 10    command -> RETURN return SEMICOLON
Rule 11    command -> BREAK SEMICOLON
Rule 12    command -> CONTINUE SEMICOLON
Rule 13    if_statement -> LBRACE blockcode RBRACE
Rule 14    if_statement -> LBRACE blockcode RBRACE ELSE LBRACE blockcode RBRACE
Rule 15    if_statement -> LBRACE blockcode RBRACE elsif
Rule 16    elsif -> ELSIF LPAREN exp RPAREN LBRACE blockcode RBRACE
Rule 17    elsif -> ELSIF LPAREN exp RPAREN LBRACE blockcode RBRACE elsif2
Rule 18    elsif2 -> elsif
Rule 19    elsif2 -> ELSE LBRACE blockcode RBRACE
Rule 20    interations -> FOR LPAREN for_assignments SEMICOLON exp SEMICOLON for_assignments RPAREN LBRACE blockcode RBRACE
Rule 21    interations -> DO LBRACE blockcode RBRACE WHILE LPAREN exp RPAREN
Rule 22    interations -> WHILE LPAREN exp RPAREN LBRACE blockcode RBRACE
Rule 23    interations -> WHILE LPAREN exp RPAREN LBRACE RBRACE
Rule 24    for_assignments -> exp
Rule 25    for_assignments -> exp COMMA for_assignments
Rule 26    function -> SUB ID LPAREN RPAREN LBRACE blockcode RBRACE
Rule 27    function -> SUB ID LPAREN function_assignments RPAREN LBRACE blockcode RBRACE
Rule 28    function_assignments -> exp
Rule 29    function_assignments -> exp COMMA function_assignments
Rule 30    call -> ID LPAREN RPAREN
Rule 31    call -> ID LPAREN function_assignments RPAREN
Rule 32    return -> exp
Rule 33    exp -> ID_SC EQUALS exp_lor
Rule 34    exp -> ID_LI EQUALS exp_lor
Rule 35    exp -> ID_SC MINUSEQUAL exp_lor
Rule 36    exp -> ID_SC PLUSEQUAL exp_lor
Rule 37    exp -> ID_SC MODEQUAL exp_lor
Rule 38    exp -> ID_SC DIVEQUAL exp_lor
Rule 39    exp -> ID_SC TIMESEQUAL exp_lor
Rule 40    exp -> exp_lor
Rule 41    exp_lor -> exp_lor LOR exp_land
Rule 42    exp_lor -> exp_land
Rule 43    exp_land -> exp_land LAND exp_or
Rule 44    exp_land -> exp_or
Rule 45    exp_or -> exp_or OR exp_and
Rule 46    exp_or -> exp_and
Rule 47    exp_and -> exp_and AND exp_comp
Rule 48    exp_and -> exp_comp_eq
Rule 49    exp_comp_eq -> exp_comp_eq EQ exp_comp
Rule 50    exp_comp_eq -> exp_comp_eq NE exp_comp
Rule 51    exp_comp_eq -> exp_comp_eq SEQ exp_comp
Rule 52    exp_comp_eq -> exp_comp_eq SNE exp_comp
Rule 53    exp_comp_eq -> exp_comp_eq CMP exp_comp
Rule 54    exp_comp_eq -> exp_comp
Rule 55    exp_comp -> exp_comp GT exp_plusminus
Rule 56    exp_comp -> exp_comp LT exp_plusminus
Rule 57    exp_comp -> exp_comp GE exp_plusminus
Rule 58    exp_comp -> exp_comp LE exp_plusminus
Rule 59    exp_comp -> exp_comp SLT exp_plusminus
Rule 60    exp_comp -> exp_comp SGT exp_plusminus
Rule 61    exp_comp -> exp_comp SGE exp_plusminus
Rule 62    exp_comp -> exp_comp SLE exp_plusminus
Rule 63    exp_comp -> exp_plusminus
Rule 64    exp_plusminus -> exp_plusminus PLUS exp_times_divides
Rule 65    exp_plusminus -> exp_plusminus MINUS exp_times_divides
Rule 66    exp_plusminus -> exp_times_divides
Rule 67    exp_times_divides -> exp_times_divides TIMES exp_lnot
Rule 68    exp_times_divides -> exp_times_divides DIVIDE exp_lnot
Rule 69    exp_times_divides -> exp_times_divides MODULO exp_lnot
Rule 70    exp_times_divides -> exp_lnot
Rule 71    exp_lnot -> XOR exp_lnot
Rule 72    exp_lnot -> exp_decrement_increment
Rule 73    exp_decrement_increment -> INCREMENT ID_SC
Rule 74    exp_decrement_increment -> DECREMENT ID_SC
Rule 75    exp_decrement_increment -> ID_SC INCREMENT
Rule 76    exp_decrement_increment -> ID_SC DECREMENT
Rule 77    exp_decrement_increment -> exp_lastlayer
Rule 78    exp_lastlayer -> LPAREN exp RPAREN
Rule 79    exp_lastlayer -> ID_SC
Rule 80    exp_lastlayer -> ID_LI
Rule 81    exp_lastlayer -> NUMBER
Rule 82    exp_lastlayer -> call
Rule 83    exp_lastlayer -> TRUE
Rule 84    exp_lastlayer -> FALSE

Terminals, with rules where they appear

AND                  : 47
ANDEQUAL             : 
BREAK                : 11
CMP                  : 53
COLON                : 
COMMA                : 25 29
CONTINUE             : 12
DECREMENT            : 74 76
DIVEQUAL             : 38
DIVIDE               : 68
DO                   : 21
ELSE                 : 14 19
ELSIF                : 16 17
EQ                   : 49
EQUALS               : 33 34
EXP                  : 
FALSE                : 84
FOR                  : 20
GE                   : 57
GT                   : 55
ID                   : 26 27 30 31
ID_LI                : 34 80
ID_SC                : 33 35 36 37 38 39 73 74 75 76 79
IF                   : 8
INCREMENT            : 73 75
LAND                 : 43
LBRACE               : 13 14 14 15 16 17 19 20 21 22 23 26 27
LBRACKET             : 
LE                   : 58
LNOT                 : 
LOR                  : 41
LPAREN               : 8 16 17 20 21 22 23 26 27 30 31 78
LSHIFT               : 
LSHIFTEQUAL          : 
LT                   : 56
MINUS                : 65
MINUSEQUAL           : 35
MODEQUAL             : 37
MODULO               : 69
NE                   : 50
NO                   : 
NUMBER               : 81
OR                   : 45
OREQUAL              : 
PERIOD               : 
PLUS                 : 64
PLUSEQUAL            : 36
Q                    : 
QQ                   : 
QR                   : 
QW                   : 
QX                   : 
RBRACE               : 13 14 14 15 16 17 19 20 21 22 23 26 27
RBRACKET             : 
RETURN               : 10
RPAREN               : 8 16 17 20 21 22 23 26 27 30 31 78
RSHIFT               : 
RSHIFTEQUAL          : 
S                    : 
SEMICOLON            : 9 10 11 12 20 20
SEQ                  : 51
SGE                  : 61
SGT                  : 60
SLE                  : 62
SLT                  : 59
SNE                  : 52
SUB                  : 26 27
TERNARY              : 
TIMES                : 67
TIMESEQUAL           : 39
TR                   : 
TRUE                 : 83
UNLESS               : 
UNTIL                : 
WHILE                : 21 22 23
XOR                  : 71
XOREQUAL             : 
error                : 

Nonterminals, with rules where they appear

blockcode            : 6 13 14 14 15 16 17 19 20 21 22 26 27
call                 : 82
command              : 1 2 5 6
elsif                : 15 18
elsif2               : 17
exp                  : 8 9 16 17 20 21 22 23 24 25 28 29 32 78
exp_and              : 45 46 47
exp_comp             : 47 49 50 51 52 53 54 55 56 57 58 59 60 61 62
exp_comp_eq          : 48 49 50 51 52 53
exp_decrement_increment : 72
exp_land             : 41 42 43
exp_lastlayer        : 77
exp_lnot             : 67 68 69 70 71
exp_lor              : 33 34 35 36 37 38 39 40 41
exp_or               : 43 44 45
exp_plusminus        : 55 56 57 58 59 60 61 62 63 64 65
exp_times_divides    : 64 65 66 67 68 69
for_assignments      : 20 20 25
function             : 3 4
function_assignments : 27 29 31
if_statement         : 8
init                 : 1 3 0
interations          : 7
return               : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . command init
    (2) init -> . command
    (3) init -> . function init
    (4) init -> . function
    (7) command -> . interations
    (8) command -> . IF LPAREN exp RPAREN if_statement
    (9) command -> . exp SEMICOLON
    (10) command -> . RETURN return SEMICOLON
    (11) command -> . BREAK SEMICOLON
    (12) command -> . CONTINUE SEMICOLON
    (26) function -> . SUB ID LPAREN RPAREN LBRACE blockcode RBRACE
    (27) function -> . SUB ID LPAREN function_assignments RPAREN LBRACE blockcode RBRACE
    (20) interations -> . FOR LPAREN for_assignments SEMICOLON exp SEMICOLON for_assignments RPAREN LBRACE blockcode RBRACE
    (21) interations -> . DO LBRACE blockcode RBRACE WHILE LPAREN exp RPAREN
    (22) interations -> . WHILE LPAREN exp RPAREN LBRACE blockcode RBRACE
    (23) interations -> . WHILE LPAREN exp RPAREN LBRACE RBRACE
    (33) exp -> . ID_SC EQUALS exp_lor
    (34) exp -> . ID_LI EQUALS exp_lor
    (35) exp -> . ID_SC MINUSEQUAL exp_lor
    (36) exp -> . ID_SC PLUSEQUAL exp_lor
    (37) exp -> . ID_SC MODEQUAL exp_lor
    (38) exp -> . ID_SC DIVEQUAL exp_lor
    (39) exp -> . ID_SC TIMESEQUAL exp_lor
    (40) exp -> . exp_lor
    (41) exp_lor -> . exp_lor LOR exp_land
    (42) exp_lor -> . exp_land
    (43) exp_land -> . exp_land LAND exp_or
    (44) exp_land -> . exp_or
    (45) exp_or -> . exp_or OR exp_and
    (46) exp_or -> . exp_and
    (47) exp_and -> . exp_and AND exp_comp
    (48) exp_and -> . exp_comp_eq
    (49) exp_comp_eq -> . exp_comp_eq EQ exp_comp
    (50) exp_comp_eq -> . exp_comp_eq NE exp_comp
    (51) exp_comp_eq -> . exp_comp_eq SEQ exp_comp
    (52) exp_comp_eq -> . exp_comp_eq SNE exp_comp
    (53) exp_comp_eq -> . exp_comp_eq CMP exp_comp
    (54) exp_comp_eq -> . exp_comp
    (55) exp_comp -> . exp_comp GT exp_plusminus
    (56) exp_comp -> . exp_comp LT exp_plusminus
    (57) exp_comp -> . exp_comp GE exp_plusminus
    (58) exp_comp -> . exp_comp LE exp_plusminus
    (59) exp_comp -> . exp_comp SLT exp_plusminus
    (60) exp_comp -> . exp_comp SGT exp_plusminus
    (61) exp_comp -> . exp_comp SGE exp_plusminus
    (62) exp_comp -> . exp_comp SLE exp_plusminus
    (63) exp_comp -> . exp_plusminus
    (64) exp_plusminus -> . exp_plusminus PLUS exp_times_divides
    (65) exp_plusminus -> . exp_plusminus MINUS exp_times_divides
    (66) exp_plusminus -> . exp_times_divides
    (67) exp_times_divides -> . exp_times_divides TIMES exp_lnot
    (68) exp_times_divides -> . exp_times_divides DIVIDE exp_lnot
    (69) exp_times_divides -> . exp_times_divides MODULO exp_lnot
    (70) exp_times_divides -> . exp_lnot
    (71) exp_lnot -> . XOR exp_lnot
    (72) exp_lnot -> . exp_decrement_increment
    (73) exp_decrement_increment -> . INCREMENT ID_SC
    (74) exp_decrement_increment -> . DECREMENT ID_SC
    (75) exp_decrement_increment -> . ID_SC INCREMENT
    (76) exp_decrement_increment -> . ID_SC DECREMENT
    (77) exp_decrement_increment -> . exp_lastlayer
    (78) exp_lastlayer -> . LPAREN exp RPAREN
    (79) exp_lastlayer -> . ID_SC
    (80) exp_lastlayer -> . ID_LI
    (81) exp_lastlayer -> . NUMBER
    (82) exp_lastlayer -> . call
    (83) exp_lastlayer -> . TRUE
    (84) exp_lastlayer -> . FALSE
    (30) call -> . ID LPAREN RPAREN
    (31) call -> . ID LPAREN function_assignments RPAREN

    IF              shift and go to state 5
    RETURN          shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    SUB             shift and go to state 11
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ID_SC           shift and go to state 16
    ID_LI           shift and go to state 18
    XOR             shift and go to state 27
    INCREMENT       shift and go to state 29
    DECREMENT       shift and go to state 30
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 32
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    ID              shift and go to state 12

    init                           shift and go to state 1
    command                        shift and go to state 2
    function                       shift and go to state 3
    interations                    shift and go to state 4
    exp                            shift and go to state 7
    exp_lor                        shift and go to state 17
    exp_land                       shift and go to state 19
    exp_or                         shift and go to state 20
    exp_and                        shift and go to state 21
    exp_comp                       shift and go to state 22
    exp_comp_eq                    shift and go to state 23
    exp_plusminus                  shift and go to state 24
    exp_times_divides              shift and go to state 25
    exp_lnot                       shift and go to state 26
    exp_decrement_increment        shift and go to state 28
    exp_lastlayer                  shift and go to state 31
    call                           shift and go to state 33

state 1

    (0) S' -> init .



state 2

    (1) init -> command . init
    (2) init -> command .
    (1) init -> . command init
    (2) init -> . command
    (3) init -> . function init
    (4) init -> . function
    (7) command -> . interations
    (8) command -> . IF LPAREN exp RPAREN if_statement
    (9) command -> . exp SEMICOLON
    (10) command -> . RETURN return SEMICOLON
    (11) command -> . BREAK SEMICOLON
    (12) command -> . CONTINUE SEMICOLON
    (26) function -> . SUB ID LPAREN RPAREN LBRACE blockcode RBRACE
    (27) function -> . SUB ID LPAREN function_assignments RPAREN LBRACE blockcode RBRACE
    (20) interations -> . FOR LPAREN for_assignments SEMICOLON exp SEMICOLON for_assignments RPAREN LBRACE blockcode RBRACE
    (21) interations -> . DO LBRACE blockcode RBRACE WHILE LPAREN exp RPAREN
    (22) interations -> . WHILE LPAREN exp RPAREN LBRACE blockcode RBRACE
    (23) interations -> . WHILE LPAREN exp RPAREN LBRACE RBRACE
    (33) exp -> . ID_SC EQUALS exp_lor
    (34) exp -> . ID_LI EQUALS exp_lor
    (35) exp -> . ID_SC MINUSEQUAL exp_lor
    (36) exp -> . ID_SC PLUSEQUAL exp_lor
    (37) exp -> . ID_SC MODEQUAL exp_lor
    (38) exp -> . ID_SC DIVEQUAL exp_lor
    (39) exp -> . ID_SC TIMESEQUAL exp_lor
    (40) exp -> . exp_lor
    (41) exp_lor -> . exp_lor LOR exp_land
    (42) exp_lor -> . exp_land
    (43) exp_land -> . exp_land LAND exp_or
    (44) exp_land -> . exp_or
    (45) exp_or -> . exp_or OR exp_and
    (46) exp_or -> . exp_and
    (47) exp_and -> . exp_and AND exp_comp
    (48) exp_and -> . exp_comp_eq
    (49) exp_comp_eq -> . exp_comp_eq EQ exp_comp
    (50) exp_comp_eq -> . exp_comp_eq NE exp_comp
    (51) exp_comp_eq -> . exp_comp_eq SEQ exp_comp
    (52) exp_comp_eq -> . exp_comp_eq SNE exp_comp
    (53) exp_comp_eq -> . exp_comp_eq CMP exp_comp
    (54) exp_comp_eq -> . exp_comp
    (55) exp_comp -> . exp_comp GT exp_plusminus
    (56) exp_comp -> . exp_comp LT exp_plusminus
    (57) exp_comp -> . exp_comp GE exp_plusminus
    (58) exp_comp -> . exp_comp LE exp_plusminus
    (59) exp_comp -> . exp_comp SLT exp_plusminus
    (60) exp_comp -> . exp_comp SGT exp_plusminus
    (61) exp_comp -> . exp_comp SGE exp_plusminus
    (62) exp_comp -> . exp_comp SLE exp_plusminus
    (63) exp_comp -> . exp_plusminus
    (64) exp_plusminus -> . exp_plusminus PLUS exp_times_divides
    (65) exp_plusminus -> . exp_plusminus MINUS exp_times_divides
    (66) exp_plusminus -> . exp_times_divides
    (67) exp_times_divides -> . exp_times_divides TIMES exp_lnot
    (68) exp_times_divides -> . exp_times_divides DIVIDE exp_lnot
    (69) exp_times_divides -> . exp_times_divides MODULO exp_lnot
    (70) exp_times_divides -> . exp_lnot
    (71) exp_lnot -> . XOR exp_lnot
    (72) exp_lnot -> . exp_decrement_increment
    (73) exp_decrement_increment -> . INCREMENT ID_SC
    (74) exp_decrement_increment -> . DECREMENT ID_SC
    (75) exp_decrement_increment -> . ID_SC INCREMENT
    (76) exp_decrement_increment -> . ID_SC DECREMENT
    (77) exp_decrement_increment -> . exp_lastlayer
    (78) exp_lastlayer -> . LPAREN exp RPAREN
    (79) exp_lastlayer -> . ID_SC
    (80) exp_lastlayer -> . ID_LI
    (81) exp_lastlayer -> . NUMBER
    (82) exp_lastlayer -> . call
    (83) exp_lastlayer -> . TRUE
    (84) exp_lastlayer -> . FALSE
    (30) call -> . ID LPAREN RPAREN
    (31) call -> . ID LPAREN function_assignments RPAREN

    $end            reduce using rule 2 (init -> command .)
    IF              shift and go to state 5
    RETURN          shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    SUB             shift and go to state 11
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ID_SC           shift and go to state 16
    ID_LI           shift and go to state 18
    XOR             shift and go to state 27
    INCREMENT       shift and go to state 29
    DECREMENT       shift and go to state 30
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 32
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    ID              shift and go to state 12

    command                        shift and go to state 2
    init                           shift and go to state 36
    function                       shift and go to state 3
    interations                    shift and go to state 4
    exp                            shift and go to state 7
    exp_lor                        shift and go to state 17
    exp_land                       shift and go to state 19
    exp_or                         shift and go to state 20
    exp_and                        shift and go to state 21
    exp_comp                       shift and go to state 22
    exp_comp_eq                    shift and go to state 23
    exp_plusminus                  shift and go to state 24
    exp_times_divides              shift and go to state 25
    exp_lnot                       shift and go to state 26
    exp_decrement_increment        shift and go to state 28
    exp_lastlayer                  shift and go to state 31
    call                           shift and go to state 33

state 3

    (3) init -> function . init
    (4) init -> function .
    (1) init -> . command init
    (2) init -> . command
    (3) init -> . function init
    (4) init -> . function
    (7) command -> . interations
    (8) command -> . IF LPAREN exp RPAREN if_statement
    (9) command -> . exp SEMICOLON
    (10) command -> . RETURN return SEMICOLON
    (11) command -> . BREAK SEMICOLON
    (12) command -> . CONTINUE SEMICOLON
    (26) function -> . SUB ID LPAREN RPAREN LBRACE blockcode RBRACE
    (27) function -> . SUB ID LPAREN function_assignments RPAREN LBRACE blockcode RBRACE
    (20) interations -> . FOR LPAREN for_assignments SEMICOLON exp SEMICOLON for_assignments RPAREN LBRACE blockcode RBRACE
    (21) interations -> . DO LBRACE blockcode RBRACE WHILE LPAREN exp RPAREN
    (22) interations -> . WHILE LPAREN exp RPAREN LBRACE blockcode RBRACE
    (23) interations -> . WHILE LPAREN exp RPAREN LBRACE RBRACE
    (33) exp -> . ID_SC EQUALS exp_lor
    (34) exp -> . ID_LI EQUALS exp_lor
    (35) exp -> . ID_SC MINUSEQUAL exp_lor
    (36) exp -> . ID_SC PLUSEQUAL exp_lor
    (37) exp -> . ID_SC MODEQUAL exp_lor
    (38) exp -> . ID_SC DIVEQUAL exp_lor
    (39) exp -> . ID_SC TIMESEQUAL exp_lor
    (40) exp -> . exp_lor
    (41) exp_lor -> . exp_lor LOR exp_land
    (42) exp_lor -> . exp_land
    (43) exp_land -> . exp_land LAND exp_or
    (44) exp_land -> . exp_or
    (45) exp_or -> . exp_or OR exp_and
    (46) exp_or -> . exp_and
    (47) exp_and -> . exp_and AND exp_comp
    (48) exp_and -> . exp_comp_eq
    (49) exp_comp_eq -> . exp_comp_eq EQ exp_comp
    (50) exp_comp_eq -> . exp_comp_eq NE exp_comp
    (51) exp_comp_eq -> . exp_comp_eq SEQ exp_comp
    (52) exp_comp_eq -> . exp_comp_eq SNE exp_comp
    (53) exp_comp_eq -> . exp_comp_eq CMP exp_comp
    (54) exp_comp_eq -> . exp_comp
    (55) exp_comp -> . exp_comp GT exp_plusminus
    (56) exp_comp -> . exp_comp LT exp_plusminus
    (57) exp_comp -> . exp_comp GE exp_plusminus
    (58) exp_comp -> . exp_comp LE exp_plusminus
    (59) exp_comp -> . exp_comp SLT exp_plusminus
    (60) exp_comp -> . exp_comp SGT exp_plusminus
    (61) exp_comp -> . exp_comp SGE exp_plusminus
    (62) exp_comp -> . exp_comp SLE exp_plusminus
    (63) exp_comp -> . exp_plusminus
    (64) exp_plusminus -> . exp_plusminus PLUS exp_times_divides
    (65) exp_plusminus -> . exp_plusminus MINUS exp_times_divides
    (66) exp_plusminus -> . exp_times_divides
    (67) exp_times_divides -> . exp_times_divides TIMES exp_lnot
    (68) exp_times_divides -> . exp_times_divides DIVIDE exp_lnot
    (69) exp_times_divides -> . exp_times_divides MODULO exp_lnot
    (70) exp_times_divides -> . exp_lnot
    (71) exp_lnot -> . XOR exp_lnot
    (72) exp_lnot -> . exp_decrement_increment
    (73) exp_decrement_increment -> . INCREMENT ID_SC
    (74) exp_decrement_increment -> . DECREMENT ID_SC
    (75) exp_decrement_increment -> . ID_SC INCREMENT
    (76) exp_decrement_increment -> . ID_SC DECREMENT
    (77) exp_decrement_increment -> . exp_lastlayer
    (78) exp_lastlayer -> . LPAREN exp RPAREN
    (79) exp_lastlayer -> . ID_SC
    (80) exp_lastlayer -> . ID_LI
    (81) exp_lastlayer -> . NUMBER
    (82) exp_lastlayer -> . call
    (83) exp_lastlayer -> . TRUE
    (84) exp_lastlayer -> . FALSE
    (30) call -> . ID LPAREN RPAREN
    (31) call -> . ID LPAREN function_assignments RPAREN

    $end            reduce using rule 4 (init -> function .)
    IF              shift and go to state 5
    RETURN          shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    SUB             shift and go to state 11
    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ID_SC           shift and go to state 16
    ID_LI           shift and go to state 18
    XOR             shift and go to state 27
    INCREMENT       shift and go to state 29
    DECREMENT       shift and go to state 30
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 32
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    ID              shift and go to state 12

    function                       shift and go to state 3
    init                           shift and go to state 37
    command                        shift and go to state 2
    interations                    shift and go to state 4
    exp                            shift and go to state 7
    exp_lor                        shift and go to state 17
    exp_land                       shift and go to state 19
    exp_or                         shift and go to state 20
    exp_and                        shift and go to state 21
    exp_comp                       shift and go to state 22
    exp_comp_eq                    shift and go to state 23
    exp_plusminus                  shift and go to state 24
    exp_times_divides              shift and go to state 25
    exp_lnot                       shift and go to state 26
    exp_decrement_increment        shift and go to state 28
    exp_lastlayer                  shift and go to state 31
    call                           shift and go to state 33

state 4

    (7) command -> interations .

    IF              reduce using rule 7 (command -> interations .)
    RETURN          reduce using rule 7 (command -> interations .)
    BREAK           reduce using rule 7 (command -> interations .)
    CONTINUE        reduce using rule 7 (command -> interations .)
    SUB             reduce using rule 7 (command -> interations .)
    FOR             reduce using rule 7 (command -> interations .)
    DO              reduce using rule 7 (command -> interations .)
    WHILE           reduce using rule 7 (command -> interations .)
    ID_SC           reduce using rule 7 (command -> interations .)
    ID_LI           reduce using rule 7 (command -> interations .)
    XOR             reduce using rule 7 (command -> interations .)
    INCREMENT       reduce using rule 7 (command -> interations .)
    DECREMENT       reduce using rule 7 (command -> interations .)
    LPAREN          reduce using rule 7 (command -> interations .)
    NUMBER          reduce using rule 7 (command -> interations .)
    TRUE            reduce using rule 7 (command -> interations .)
    FALSE           reduce using rule 7 (command -> interations .)
    ID              reduce using rule 7 (command -> interations .)
    $end            reduce using rule 7 (command -> interations .)
    RBRACE          reduce using rule 7 (command -> interations .)


state 5

    (8) command -> IF . LPAREN exp RPAREN if_statement

    LPAREN          shift and go to state 38


state 6
